--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
 .App {
   text-align: center;
+  margin-top: 0%;
+  margin-bottom: 0%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.le-header{
+  background-color: brown;
+  height: 50px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.le-footer{
+  background-color: cadetblue;
+  position: fixed;
+  bottom :0;
+  width: 100%;
+  height: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+.le-sidebar{
+  height: 100%;
+  width: 160px;
+  position : fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: black;
+  overflow-x: hidden;
+  padding-top: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.le-sidebar a{
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #ad0d0d;
+  display: block;
 }
